<resources>
    <string name="app_name">Statistical Query (Group and Sort)</string>
    <string name="add">Add</string>
    <string name="type">Type:</string>
    <string name="field">Field:</string>
    <string name="remove_statistic">Remove Statistic</string>
    <string name="left"><![CDATA[<<]]></string>
    <string name="right"><![CDATA[>>]]></string>
    <string name="group_fields">Group Field(s):</string>
    <string name="order_by_field">Order by Field</string>
    <string name="get_statistics">Get Statistics</string>
    <string name="reverse_sort_order">Reverse sort order</string>
    <string name="obesity_inactivity_diabetes_feature_service">https://services.arcgis.com/jIL9msH9OI208GCb/arcgis/rest/services/Counties_Obesity_Inactivity_Diabetes_2013/FeatureServer/0
    </string>
</resources>
