<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.widget.TextView
            android:text="@string/group_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupFieldsTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/groupFieldRecyclerView"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/groupFieldRecyclerView"
            android:layout_marginLeft="8dp"/>
    <android.widget.TextView
            android:text="@string/order_by_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orderByFieldTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/orderFieldRecyclerView"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/orderFieldRecyclerView"
            android:layout_marginStart="8dp"/>
    <android.widget.Button
            android:text="@string/get_statistics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStatisticsButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <android.widget.Button
            android:text="@string/reverse_sort_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeSortOrderButton"
            app:layout_constraintBottom_toTopOf="@+id/getStatisticsButton"
            app:layout_constraintEnd_toEndOf="@+id/orderFieldRecyclerView"
            app:layout_constraintStart_toStartOf="@+id/orderFieldRecyclerView"/>
    <android.widget.Button
            android:text="@string/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/moveRightButton"
            app:layout_constraintStart_toEndOf="@+id/groupFieldRecyclerView"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/groupFieldRecyclerView"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/orderFieldRecyclerView"
            android:layout_marginLeft="8dp"
            android:minHeight="0dp"
            android:minWidth="0dp"/>
    <android.widget.Button
            android:text="@string/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/moveLeftButton"
            app:layout_constraintEnd_toEndOf="@+id/moveRightButton"
            app:layout_constraintStart_toStartOf="@+id/moveRightButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/moveRightButton"
            android:minHeight="0dp"
            android:minWidth="0dp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/groupFieldRecyclerView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/moveRightButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/groupFieldsTextView"
            android:background="@drawable/border"
            app:layout_constraintBottom_toTopOf="@+id/getStatisticsButton"
            android:layout_marginLeft="8dp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/orderFieldRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/moveRightButton"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/orderByFieldTextView"
            app:layout_constraintBottom_toTopOf="@+id/changeSortOrderButton"
            android:background="@drawable/border"/>

</androidx.constraintlayout.widget.ConstraintLayout>
