<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fieldTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/fieldSpinner"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/fieldSpinner"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/typeSpinner"
            app:layout_constraintStart_toStartOf="@+id/typeSpinner"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/typeSpinner"
            app:layout_constraintTop_toTopOf="@+id/typeSpinner"
            android:layout_marginRight="8dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fieldSpinner"
            app:layout_constraintTop_toBottomOf="@+id/fieldTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/typeSpinner"
            android:layout_marginLeft="8dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/typeSpinner"
            app:layout_constraintEnd_toStartOf="@+id/addButton"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/fieldSpinner"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/fieldSpinner"
            app:layout_constraintBottom_toBottomOf="@+id/fieldSpinner"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/remove_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/removeStatisticButton"
            app:layout_constraintEnd_toEndOf="@+id/fieldTypeRecyclerView"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/fieldTypeRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/removeStatisticButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/typeSpinner"
            android:background="@drawable/border"/>

</androidx.constraintlayout.widget.ConstraintLayout>
